@@ -4,6 +4,14 @@ TODO LIST (Moved again to the file TODO)
 KPilot Developer's notes for April 30th, 2003
 =============================================
 
+2003-4-25  Adriaan de Groot
+* Updated resizing action in the conduit config dialog.
+* Added a ConduitConfigBase to the knotes conduit.
+* Changed a bunch of Name[] entries for the time conduit. We
+  need shorter names; most of them are horribly redundant.
+* Noticed that the conduit checklist items don't always get
+  painted right. Added a workaround.
+
 2003-4-24  Adriaan de Groot
 * More work on the conduit configuration stuff.
 * Make FUNCTIONSETUP print PRETTY_FUNCTION instead of just FUNCTION.
